--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ install:
   - pip install scipy
 # command to run tests
 script:
-  - pytest # or py.test for Python versions 3.5 and below
+  - python -m pytest --cov=. # or py.test for Python versions 3.5 and below
