--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ python:
 install:
   - pip install numpy
   - pip install scipy
+  - pip install PySide2 pytest-qt pytest-cov pytest-mock
 # command to run tests
 script:
-  - python -m pytest # or py.test for Python versions 3.5 and below
+  - python -m pytest -vv --cov PIM_Calculator
