--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
 install:
   - pip install numpy
   - pip install scipy
-  - pip install PySide2 pytest-qt pytest-cov pytest-mock matplotlib
+  - pip install PySide2 pytest-qt pytest-cov pytest-mock matplotlib pytest-xvfb
 # command to run tests
 script:
-  - python -m pytest -vv --cov PIM_Calculator
+  - python -m pytest -vv --cov ./PIM_Calculator
