--- a/python/tox.ini
+++ b/python/tox.ini
@@ -1,7 +1,25 @@
+[tox]
+envlist = py36
+    py39
+skip_missing_interpreters = true
+
+[testenv]
+deps = pytest
+    PySide2
+    pytest-mock
+    pytest-cov
+    pytest-qt
+    pytest-xvfb
+    scipy
+    numpy    
+    matplotlib
+    
+commands = pytest {posargs} # substitute with tox' positional arguments
+
 [gh-actions]
 python =
-    2.7: py27
     3.6: py36
     3.7: py37, docs
     3.8: py38, lint, manifest
+    3.9: py39, lint, manifest
     pypy3: pypy3
