--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,11 +12,11 @@ jobs:
     name: "Python ${{ matrix.python-version }}"
     runs-on: "ubuntu-latest"
     env:
-      USING_COVERAGE: '2.7,3.6,3.8'
+      USING_COVERAGE: '3.6,3.8'
 
     strategy:
       matrix:
-        python-version: ["2.7","3.6", "3.7", "3.8", "pypy3"]
+        python-version: ["3.6", "3.7", "3.8", "3.9", "pypy3"]
 
     steps:
       - uses: "actions/checkout@v2"
@@ -32,9 +32,9 @@ jobs:
           python -m pip install --upgrade coverage[toml] virtualenv tox tox-gh-actions          
 
       - name: "Run tox targets for ${{ matrix.python-version }}"
-        run: "python -m tox"
+        run: "cd python && python -m tox"
       - name: "Convert coverage"
-        run: "python -m coverage xml"
+        run: "cd python && python -m coverage xml"
       - name: "Upload coverage to Codecov"
         uses: "codecov/codecov-action@v1"
         with:
